collapse card if horse is no longer competing

--- a/src/app/components/scorelist/horse/horse.component.scss
+++ b/src/app/components/scorelist/horse/horse.component.scss
@@ -29,12 +29,16 @@ div.row {
       margin-bottom: 0;
     }
   }
+}
 
-  &.dnf {
-    font-style: italic;
-    
-    h4 {
-      text-align: center;
-    }
+div.dnf {
+  font-style: italic;
+  
+  h4 {
+    text-align: center;
+  }
+
+  div.main {
+    display:none;
   }
 }
